add country table

--- a/tweet_loader/logging.ini
+++ b/tweet_loader/logging.ini
@@ -18,7 +18,7 @@ qualname = tweet_loader.loader
 propagate = 0
 
 [logger_tweet]
-level = INFO
+level = DEBUG
 handlers = consoleHandler
 qualname = tweet_loader.tweet
 propagate = 0
