--- a/tweet_loader/logging.ini
+++ b/tweet_loader/logging.ini
@@ -18,13 +18,13 @@ qualname = tweet_loader.loader
 propagate = 0
 
 [logger_tweet]
-level = DEBUG
+level = INFO
 handlers = consoleHandler
 qualname = tweet_loader.tweet
 propagate = 0
 
 [logger_sql]
-level = DEBUG
+level = INFO
 handlers = consoleHandler
 qualname = tweet_loader.sql
 propagate = 0
